<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/input_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:autofillHints="email"
                android:backgroundTint="@color/underline_color"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="5dp"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/underline_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:backgroundTint="@color/underline_color"
                android:drawableStart="@drawable/lock"
                android:hint="@string/password"
                android:imeOptions=""
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:nextFocusForward="@id/button_login"
                android:textColorHint="@color/underline_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_repeat_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:backgroundTint="@color/underline_color"
                android:drawableStart="@drawable/lock"
                android:hint="@string/repeat_password"
                android:imeOptions=""
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:nextFocusForward="@id/button_login"
                android:textColorHint="@color/underline_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/input_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:autofillHints="name"
                android:backgroundTint="@color/underline_color"
                android:drawableStart="@drawable/user"
                android:drawablePadding="5dp"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/underline_color" />
        </LinearLayout>

        <TextView
            android:id="@+id/link_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/login_instead"
            android:textColor="@color/link"
            android:textSize="@dimen/link_size" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:padding="50dp">

        <Button
            android:id="@+id/button_signup"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/button"
            android:padding="10dp"
            android:text="@string/signup_button"
            android:textColor="@color/button_text_color" />
    </RelativeLayout>
</LinearLayout>