<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/story_view_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/story_view_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/story_view_paragraphs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:id="@+id/story_view_suggested_paragraphs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/button_suggest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggest" />

    <EditText
        android:id="@+id/edit_text_paragraph_suggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new_story_paragraph"
        android:importantForAutofill="no"
        android:inputType="text"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_submit_suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_suggestion"
        android:visibility="gone" />
</LinearLayout>